package com.tcgpocket.action;

import com.tcgpocket.effect.AttemptResult;
import com.tcgpocket.resolve.ResolutionContext;

/**
 * Something a player can choose to do.
 *
 * <p>This hierarchy has two halves that look alike but arise differently:
 *
 * <ul>
 *   <li><b>Printed on cards</b> — {@link Action}, {@link PlainAction} and the
 *       combinators around them. Pure immutable description, built once when
 *       the card is defined, holding only other description.
 *       An {@code ActivatedAbility} holds one of these too: it is printed
 *       text like any other, and it is {@link UseAbilityAction} that knows
 *       which Pokemon is using it.
 *   <li><b>Generated by the engine</b> — {@link RetreatAction},
 *       {@link EvolveAction}, {@link PlayCardAction},
 *       {@link AttachEnergyAction}, {@link UseAbilityAction} and
 *       {@link EndTurnAction}. Built fresh each turn by legal-move generation,
 *       and so allowed to hold runtime objects such as a particular
 *       {@code CardInstance}. They are what a player actually picks between.
 * </ul>
 *
 * <p>Both answer {@link #isLegal} so a single list can be offered to an agent.
 */
public sealed interface IAction permits
        Action, PlainAction, PlayedOnto,
        WithPrecondition, MultiAttempt, ChoiceAction,
        RetreatAction, EvolveAction, PlayCardAction,
        AttachEnergyAction, UseAbilityAction, EndTurnAction {

    /**
     * Whether the rules allow this right now.
     *
     * <p>Must be free of side effects: legal-move generation calls it on every
     * candidate before anything is chosen.
     */
    boolean isLegal(ResolutionContext context);

    AttemptResult execute(ResolutionContext context);
}
