@startuml
title IAction — what a player can choose to do

skinparam linetype ortho

interface IAction <<sealed>> {
    + execute(ResolutionContext): AttemptResult
    /' Used by TurnEngine.legalActions to filter what the player is offered.
       See GameFlow.puml. '/
    + isLegal(ResolutionContext): boolean
}

/' --- printed on cards --- '/

/' An attack. '/
class Action <<record>> implements IAction {
    - name: String
    - description: String
    /' Gates the attack on attached energy — previously missing, so no attack
       could be restricted at all. See Energy.puml. '/
    - cost: EnergyCost
    - attempt: IAttempt
}

/'
  No cost and no gate: an attempt, and nothing else. Serves a Trainer card AND
  an ActivatedAbility, which look unrelated but are the same shape once the
  gating is taken out. The gating lives in PlayCardAction and UseAbilityAction
  respectively, which is why isLegal here is unconditionally true.
  (Was TrainerAction, which read wrong on a Pokemon ability.)
'/
class PlainAction <<record>> implements IAction {
    - description: String
    - attempt: IAttempt
}

/' A Trainer played by dragging it onto a Pokemon (Misty, Erika, Brock). The
   drop is part of the move: PlayCardAction carries it, one move per candidate,
   and the attempt reads it through PlayTarget. isLegal checks the drop. '/
class PlayedOnto <<record>> implements IAction {
    - candidates: IMultiTarget
    - description: String
    - attempt: IAttempt
}

/' --- combinators --- '/

class WithPrecondition <<record>> implements IAction {
    - condition: ICondition<ResolutionContext>
    - action: IAction
}

/' Each attempt is made independently: one failing does not stop the next.
   Contrast Attempt, which short-circuits internally. '/
class MultiAttempt <<record>> implements IAction {
    - attempts: List<IAttempt>
}

/' "Choose one:" — the branch is picked at resolution time by an agent, not
   baked in when the card is built. See IPlayer.puml. '/
class ChoiceAction <<record>> implements IAction {
    - choices: List<IAction>
    - chooser: ISideTarget
    - prompt: String
}

/' --- generated by the engine, not printed on a card --- '/

/'
  TurnEngine.legalActions() returns these alongside the active Pokemon's
  attacks, so an IPlayer picks its whole turn from one uniform list. This is
  the piece that turns the model into a simulator rather than a card renderer.
'/
class RetreatAction <<record>> implements IAction {
    - replacement: ITarget
}

class EvolveAction <<record>> implements IAction {
    - evolution: CardInstance
    - onto: ITarget
}

class PlayCardAction <<record>> implements IAction {
    - card: CardInstance
    /' Where a PlayedOnto card was dropped; empty for every other card. '/
    - onto: Optional<PokemonInPlay>
    + {static} all(CardInstance, ResolutionContext): List<PlayCardAction>
}

class AttachEnergyAction <<record>> implements IAction {
    - target: ITarget
}

class UseAbilityAction <<record>> implements IAction {
    - source: PokemonInPlay
    - ability: IAbility
}

class EndTurnAction <<record>> implements IAction {}

Action *-- IAttempt
Action o-- EnergyCost
PlainAction *-- IAttempt
PlayedOnto *-- IAttempt
WithPrecondition o-- IAction
MultiAttempt *-- IAttempt
ChoiceAction o-- IAction

@enduml
